# new_mmo

./: .gitignore  README.md  clean_phase2.py  create_dummy_iff.py  implementation_plan.md  neutralize_calls.py  package-lock.json  revert_phase2.py  task.md  walkthrough.md
lbg-mmo/: CMakeLists.txt  fix_getters.py  fix_getters2.py
lbg-mmo/Core3/MMOCoreORB/: CMakeLists.txt
lbg-mmo/Core3/MMOCoreORB/cmake/Modules/: FindMySql.cmake
lbg-mmo/Core3/MMOCoreORB/src/client/: ClientCore.cpp  ClientCore.h
lbg-mmo/Core3/MMOCoreORB/src/terrain/: ProceduralTerrainAppearance.cpp
lbg-mmo/MMOEngine/: CMakeLists.txt
lbg-mmo/docs/: agents_roles.md  architecture.md  core3_cleanup_plan.md  mission_brief.md  orchestrator_api.md  pipeline_generation.md
lbg-mmo/lbg/ai-hooks/: actions.json  events.json  mapping.json
lbg-mmo/lbg/biomes/templates/: biome_desert.json
lbg-mmo/lbg/factions/: factions_index.json
lbg-mmo/lbg/planets/: planets_index.json
lbg-mmo/lbg/planets/templates/: planet_01.json
lbg-mmo/lbg/professions/: professions_index.json
lbg-mmo/lbg/races/templates/: race_006.json
lbg-mmo/server-core3/: CMakeLists.txt  main.cpp
lbg-mmo/server-core3/conf/: ConfigManager.h
lbg-mmo/server-core3/server/chat/: ChatManagerImplementation.cpp
lbg-mmo/server-core3/server/login/: SWGRealmsAPI.cpp
lbg-mmo/server-core3/server/zone/: GroundZone.idl  ZoneClientSession.idl
lbg-mmo/server-core3/tests/: JediManagerTest.cpp  StringTest.cpp
lbg-mmo/server-core3/tools/: idl_compiler.java  idl_compiler.sh
lbg-mmo/server-core3/tools/idl/: idl2cpp.xsl  idl2h.xsl
(+641 files in other folders)
